# mobile-grasping

./: .gitignore  README.md  pyproject.toml
Docs/: progress_log.md  writeup.tex
docs/: progress_log.md
experiments/: exp01_holistic_reference.py  plot_tracking_error.py
ros_ws/: INSTALL.md  README.md
ros_ws/src/mobile_grasping_ros/: CMakeLists.txt  package.xml  setup.py
ros_ws/src/mobile_grasping_ros/config/: arm_position_controller.yaml  arm_velocity_controller.yaml  controller_params.yaml
ros_ws/src/mobile_grasping_ros/launch/: pipeline.launch  sim.launch  sim_position.launch  sim_velocity.launch
ros_ws/src/mobile_grasping_ros/scripts/: controller_node.py  estimator_node.py  eval_node.py  predictor_node.py  run_m2_trial.py
ros_ws/src/mobile_grasping_ros/src/mobile_grasping_ros/: __init__.py  omx_kinematics.py  qp_solver.py
src/mobile_grasping/: __init__.py
src/mobile_grasping/controller/: __init__.py  omx_kinematics.py  qp_solver.py
swift_sim/: exp2_sweep.py  omx_tb3.py  omx_tb3_urdf.py  plot_m1.py  plot_m2.py  record.py  run_m1.py  run_m2.py  view_swift.py
tests/: test_imports.py
